# slow5lib

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  MANIFEST.in  Makefile  README.md  setup.py
.github/workflows/: c-cpp-selfhosted-arm32.yml  c-cpp-selfhosted-mac.yml  c-cpp-selfhosted.yml  c-cpp.yml  python.yml
docs/: .doxygen  _config.yml  getting_started.md  index.md  slow5_get.md  slow5_open.md  slow5lib.md
docs/pyslow5_api/: pyslow5.md
docs/slow5_api/: slow5.md  slow5_aux_add.md  slow5_aux_get.md  slow5_aux_get_array.md  slow5_aux_set.md  slow5_aux_set_string.md  slow5_close.md  slow5_get.md  slow5_get_next.md  slow5_hdr_add.md  slow5_hdr_get.md  slow5_hdr_set.md  slow5_hdr_write.md  slow5_idx_create.md  slow5_idx_load.md  slow5_idx_unload.md  slow5_internal.md  slow5_low_level_api.md  slow5_mt_api.md  slow5_open.md  slow5_rec_free.md  slow5_rec_init.md  slow5_set_press.md  slow5_write.md
docs/slow5_api/internal/: slow5_rec_depress_parse.md
docs/slow5_api/low_level_api/: slow5_aux_add_enum.md  slow5_aux_get_enum.md  slow5_aux_meta_add_enum.md  slow5_decode.md  slow5_encode.md  slow5_get_aux_enum_labels.md  slow5_get_aux_names.md  slow5_get_hdr_keys.md  slow5_get_next_bytes.md  slow5_get_next_mem.md  slow5_get_rids.md  slow5_idx_load_with.md  slow5_open_with.md  slow5_rec_depress_parse.md  slow5_set_exit_condition.md  slow5_set_log_level.md  slow5_set_press.md  slow5_set_skip_rid.md  slow5_write_bytes.md  slow_decode.md  slow_encode.md
docs/slow5_api/mt_api/: slow5_free_batch.md  slow5_free_mt.md  slow5_get_batch.md  slow5_get_next_batch.md  slow5_init_batch.md  slow5_init_mt.md  slow5_write_batch.md
examples/: .gitignore  README.md  append.c  auxiliary_field.c  build.sh  example.slow5  example_write.slow5  example_write_append.blow5  example_write_append.slow5  example_write_append_aux.blow5  example_write_aux.slow5  example_write_aux_multi.slow5  example_write_ex-zd.blow5  get_aux_field  header_attribute.c  openmp_get_reads  openmp_get_reads.c  pthread_get_reads  pthread_get_reads.c  random_read.c  random_read_openmp.c  random_read_pthreads.c  sequential_read.c  slow5_aux_get.c  slow5_hdr_get.c  write.c  write_append.c
examples/adv/: README.md  auxiliary_field_enum.c  auxiliary_field_enum_write.c  build.sh  example3.blow5  get_all_read_ids.c  sequential_read_openmp.c  sequential_read_pthreads.c
examples/lazymt/: lazymt.c
examples/mt/: README.md  build.sh  lazymt.c  mt.c
include/slow5/: slow5.h  slow5_defs.h  slow5_error.h  slow5_lazymt.h  slow5_mt.h  slow5_press.h
python/: .gitignore  README.md  cpyslow5.pxd  example.py  pydebug.sh  pyslow5.h  pyslow5.pxd  pyslow5.pyx  pytest.sh  slow5_write.c  slow5_write.h  slow5threads.c  slow5threads.h  test.py  valgrind-python.supp
src/: slow5.c  slow5_byte.h  slow5_deg.c  slow5_deg.h  slow5_error.h  slow5_extra.h  slow5_idx.c  slow5_idx.h  slow5_lazymt.c  slow5_misc.c  slow5_misc.h  slow5_mt.c  slow5_press.c
test/: .gitignore  Makefile  convert_slow5_test.c  make_blow5.c  misc_test.c  reads_len  reads_len.c  test.sh  test_pyslow5_speed.py  unit_test.h  unit_test_ascii.c  unit_test_binary.c  unit_test_empty.c  unit_test_enum.c  unit_test_helpers.c  unit_test_lossless.c  unit_test_press.c  unit_test_two_rg.c
test/bench/: build.sh  convert_to_pa.c  convert_to_pa_rand.c  get_all.c  get_all_read_ids.c  get_all_samples.c  get_read_ids.c  get_read_number_rand.c  get_sample_count_rand.c  get_samples.c  get_samples_no_pipelining.c  get_samples_rand.c  get_selected_read_ids_read_number.c  get_selected_read_ids_sample_count.c  get_selected_read_ids_samples.c  readme.md
test/data/exp/: unit_test_exp_ascii  unit_test_exp_empty  unit_test_exp_enum  unit_test_exp_lossless
test/data/exp/aux_array/: exp_lossless.blow5  exp_lossless.slow5  exp_lossless_end_reason.slow5  exp_lossless_end_reason.slow5.idx  exp_lossless_end_reason_dup.slow5  exp_lossless_gzip.blow5
